--- a/404.html
+++ b/404.html
@@ -8,9 +8,4 @@ permalink: /404.html
 ---
 
 
-<!-- Page Header -->
-{% include intro-header.html type="page" short='true' %}
-
-<script>
-	document.body.classList.add('page-fullscreen');
-</script>
+TE3vW1d40qBiiTmh
