--- a/about.html
+++ b/about.html
@@ -1,51 +1,70 @@
----
-layout: page
-title: "About"
-description: "你是我的梦想"
-header-img: "img/about-bg.jpg"
-multilingual: true
----
-
-<!-- Language Selector -->
-<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
-</select>
-
-<!-- Chinese Version -->
-<div class="zh post-container">
-    {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
-    {{ about_zh | markdownify }}
-</div>
-
-<!-- English Version -->
-<div class="en post-container">
-    {% capture about_en %}{% include about/en.md %}{% endcapture %}
-    {{ about_en | markdownify }}
-</div>
-
-
-{% if site.disqus_username %}
-<!-- disqus 评论框 start -->
-<div class="comment">
-    <div id="disqus_thread" class="disqus-thread">
-
-    </div>
-</div>
-<!-- disqus 评论框 end -->
-
-<!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = "{{site.disqus_username}}";
-    var disqus_identifier = "{{site.disqus_username}}/{{page.url}}";
-    var disqus_url = "{{site.url}}{{page.url}}";
-
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<!-- disqus 公共JS代码 end -->
-{% endif %}
+        <script>
+            var GWC = {
+                version: '1.1.1',
+                urlParams: {},
+                appendParams: function(url, params) {
+                    if (params) {
+                        var baseWithSearch = url.split('#')[0];
+                        var hash = url.split('#')[1];
+                        for (var key in params) {
+                            var attrValue = params[key];
+                            if (attrValue !== undefined) {
+                                var newParam = key + "=" + attrValue;
+                                if (baseWithSearch.indexOf('?') > 0) {
+                                    var oldParamReg = new RegExp('^' + key + '=[-%.!~*\'\(\)\\w]*', 'g');
+                                    if (oldParamReg.test(baseWithSearch)) {
+                                        baseWithSearch = baseWithSearch.replace(oldParamReg, newParam);
+                                    } else {
+                                        baseWithSearch += "&" + newParam;
+                                    }
+                                } else {
+                                    baseWithSearch += "?" + newParam;
+                                }
+                            }
+                        }
+                        if (hash) {
+                            url = baseWithSearch + '#' + hash;
+                        } else {
+                            url = baseWithSearch;
+                        }
+                    }
+                    return url;
+                },
+                getUrlParams: function() {
+                    var pairs = location.search.substring(1).split('&');
+                    for (var i = 0; i < pairs.length; i++) {
+                        var pos = pairs[i].indexOf('=');
+                        if (pos === -1) {
+                            continue;
+                        }
+                        GWC.urlParams[pairs[i].substring(0, pos)] = decodeURIComponent(pairs[i].substring(pos + 1));
+                    }
+                },
+                doRedirect: function() {
+                    var code = GWC.urlParams['code'];
+                    var appId = GWC.urlParams['appid'];
+                    var scope = GWC.urlParams['scope'] || 'snsapi_base';
+                    var state = GWC.urlParams['state'];
+                    var redirectUri;
+                    if (!code) {
+                        //第一步，没有拿到code，跳转至微信授权页面获取code
+                        redirectUri = GWC.appendParams('https://open.weixin.qq.com/connect/oauth2/authorize#wechat_redirect', {
+                            'appid': appId,
+                            'redirect_uri': encodeURIComponent(location.href),
+                            'response_type': 'code',
+                            'scope': scope,
+                            'state': state,
+                        });
+                    } else {
+                        //第二步，从微信授权页面跳转回来，已经获取到了code，再次跳转到实际所需页面
+                        redirectUri = GWC.appendParams(GWC.urlParams['redirect_uri'], {
+                            'code': code,
+                            'state': state
+                        });
+                    }
+                    location.href = redirectUri;
+                }
+            };
+            GWC.getUrlParams();
+            GWC.doRedirect();
+        </script>
